--- a/ProgrammingEx.html
+++ b/ProgrammingEx.html
@@ -423,8 +423,9 @@
                                     <Lock className="w-8 h-8 text-blue-600" />
                                 </div>
                                 <h1 className="text-2xl font-bold text-gray-800">ระบบสอบออนไลน์</h1>
+                                <p className="text-gray-500 mt-2">คุณครูปฎิภาณ พานทอง</p>
                                 <p className="text-gray-500 mt-2">การเขียนโปรแกรมเชิงวัตถุเบื้องต้น
-รหัสวิชา 21910_2011</p>
+รหัสวิชา 21910_201</p>
                             </div>
 
                             <div className="space-y-4">
